--- a/iconenc.css
+++ b/iconenc.css
@@ -1,3 +1,19 @@
+@font-face {
+       font-family: 'encFont';
+       src:  url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.eot?t=1590048286605'),
+       src: url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.eot?t=1590048286605#iefix') format('embedded-opentype'),
+            url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.ttf?t=1590048286605') format('truetype'),
+            url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.woff?t=1590048286605') format('woff'),
+            url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.svg?t=1590048286605#iconfont') format('svg');
+}
+
+.encFont {
+  font-family: "encIcon" !important;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .enc-source:before {
   content: "\e709";
 }
