--- a/iconenc.css
+++ b/iconenc.css
@@ -8,7 +8,7 @@
 }
 
 .encFont {
-  font-family: "encIcon" !important;
+  font-family: "encFont" !important;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
