--- a/iconenc.css
+++ b/iconenc.css
@@ -4,6 +4,7 @@
        src: url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.eot?t=1590048286605#iefix') format('embedded-opentype'),
             url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.ttf?t=1590048286605') format('truetype'),
             url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.woff?t=1590048286605') format('woff'),
+            url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.woff2?t=1590048286605') format('woff2'),
             url('https://raw.githack.com/CK1408/51kanju/main/conch/asset/fonts/iconfont.svg?t=1590048286605#iconfont') format('svg');
 }
 
